# AtomicSeats

./: .env.example  .gitignore  CREATE.SQL  Dockerfile  LICENSE  README.md  app.py  database_manager.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  stress_test.py  test_seat_system.py
docs/testing/: manual-test-commands.md
templates/: home-test.hmtl.html  home.html  home1.html
