[project]
name = "seat-arrangement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "requests>=2.32.5",
    "flask>=3.1.2",
    "python-dotenv>=1.0.1",
    "SQLAlchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=21.2.0",
    "flask-sqlalchemy>=3.1.1",
    "apscheduler>=3.11.2",
    "behave>=1.3.3",
]
